index.css
:root {
    --transparent: #00000000;
    --red: #FF383B;
    --green: #56D861;
    --search-box-background: #4dff81;
    --background-color: #212425;
    --main-background-color: #181a1b;
    --foreground-color: #ffffff;
    --foreground-title-color: #FFC300;
    --background-dark-color: #ff4dcb;
}

* {
    margin: 0;
    padding: 0;
}

html, body, .content {
    height: 100%;
    width: 100%;
}

.content {
    background-color: var(--main-background-color);
}

.main-container {
    background-color: var(--background-color);
    width: 90%;
    height: 80%;
    position: absolute;
    top: 5%;
    bottom: 0;
    right: 0;
    left: 0;
    margin: auto;
    border-radius: 5px;
    overflow: hidden;
    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; */
    /* box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px; */
    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
}

.stripe-container {
    background-color: var(--red);
    height: 3vh;
}
.question-latex-container {
    background-color: var(--background-color);
    height: 37%;
    color: var(--foreground-color);
    font-size: 5vw;
    display: flex;
    justify-content: center;
    align-items: center;
}
.answer-latex-container {
    background-color: var(--background-dark-color);
    margin: 20px;
    margin-bottom: 0px;
    border-radius: 5px;
    height: 39%;
    color: var(--foreground-color);
    font-size: 5vw;
    display: flex;
    justify-content: center;
    align-items: center;
}
.answer-plain-container {
    background-color: var(--background-color);
    height: 17%;
    margin: 20px;
    margin-top: 0px;
}
input {
    width: 100%;
    height: 100%;
    background-color: var(--transparent);
    border: none;
    color: var(--foreground-color);
    text-align: center;
    font-size: 3vw;
    border: hidden;
}
input:focus {
    outline: none;
}

.icon-button {
    color: var(--foreground-color);
    background-color: var(--transparent);
    display: flex;
    justify-content: center;
    align-items: center;
    width: 5vh;
    height: 5vh;
    position: absolute;
}

.button-search {
    top: 10%;
    right: 2%;
    border-radius: 5px;
}
.button-skip {
    top: 16%;
    right: 2%;
    border-radius: 5px;
}
.button-solve {
    top: 22%;
    right: 2%;
    border-radius: 5px;
}
.button-export {
    top: 28%;
    right: 2%;
    border-radius: 5px;
}
.button-import {
    top: 34%;
    right: 2%;
    border-radius: 5px;
}

.search-box-container {
    display: none;
    height: fit-content;
    max-height: 80%;
    width: 95%;
    position: absolute;
    top: 10%;
    right: 0;
    left: 0;
    margin: auto;
    background-color: var(--search-box-background);
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    border-radius: 5px;
    overflow: visible;
}

.search-result {
    background-color: var(--search-box-background);
    color: var(--foreground-color);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 3vh;
    width: 100%;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    padding-top: 0.5%;
    padding-bottom: 0.5%;
}

.selected {
    text-decoration: underline;
    text-decoration-color: var(--foreground-color);
}

.search-result-index {
    display: none;
}

.invisible {
    display: none;
}

hr {
    height: 12px;
    border: 0;
    box-shadow: inset 0 12px 12px -12px rgba(0, 0, 0, 0.5);
}

@font-face {
    font-family: "league_gothic";
    src: url(./fonts/league-gothic.regular.ttf);
}

.title {
    background-color: var(--main-background-color);
    font: 10vh league_gothic, Sans-Serif;
    position: absolute;
    right: 0;
    left: 0;
    top: 1%;
    text-align: center;
    margin: auto;
    color: rgba(26, 177, 255, 0.5);
    text-shadow: 3px 3px 0 #FF00B4;
    text-transform: uppercase;
}

.horizontal-list {
    width: 100%;
    text-align: center;
}

.horizontal-list li {
    display: inline;
    list-style: none;
}
.horizontal-list li:after {
    content: " \00b7";
}
.horizontal-list li:last-child:after {
    content: none;
}

